--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 
 /* Header styles */
 header {
-  background-color: #8e44ad; 
+  background-color: #d35400; 
   color: white;
   text-align: center;
   padding: 30px 20px;
