--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   max-width: 1000px;
   margin: 0 auto;
   padding: 20px;
-  background-color: #dddddd; /* grey */
+  background-color: #006400;
 }
 
 /* Header styles */
