--- a/style.css
+++ b/style.css
@@ -8,12 +8,12 @@ body {
   max-width: 1000px;
   margin: 0 auto;
   padding: 20px;
-  background-color: #006400;
+  background-color: #dddddd;
 }
 
 /* Header styles */
 header {
-  background-color: #d35400; /* Orange */
+  background-color: #006400; /* Orange */
   color: white;
   text-align: center;
   padding: 30px 20px;
@@ -36,10 +36,10 @@ section {
   padding: 20px;
   margin-bottom: 20px;
   border-radius: 8px;
-  border-left: 5px solid #d35400; /* Orange */
+  border-left: 5px solid #006400; /* Orange */
 }
 section h2 {
-  color: #d35400; /* Orange */
+  color: #006400; /* Orange */
   margin-top: 0;
   border-bottom: 2px solid #ccc;
   padding-bottom: 10px;
@@ -49,7 +49,7 @@ section h2 {
 footer {
   text-align: center;
   padding: 20px;
-  background-color: #d35400; /* Orange */
+  background-color: #006400; /* Orange */
   color: white;
   border-radius: 8px;
   margin-top: 30px;
